--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,29 @@
-.App {
-  text-align: center;
+body {
+  background-color: #dcdcdd;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.4;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.primary-button {
+  border: 3px solid white;
+  font-family: inherit;
+  font-size: inherit;
   color: white;
+  background: rgb(70, 73, 76);
+  cursor: pointer;
+  padding: 5px;
+  display: inline-block;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  outline: none;
+  position: relative;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.primary-button:hover {
+  color: #0e83cd;
+  background: #fff;
 }
