--- a/src/components/tasks/task-item/TaskItem.css
+++ b/src/components/tasks/task-item/TaskItem.css
@@ -1,5 +1,5 @@
 .agile-card {
-    background-color: #e8eef2;
+    background-color: #fffbfe;
     max-height: 400px;
     padding: 5px;
     border-radius: 5px;
